Foldable Navigation Menu

--- a/css/my.style.css
+++ b/css/my.style.css
@@ -96,43 +96,35 @@ a.button:hover{
     text-decoration: none;
 }
 
+/*--- 部门栏 开始 ---*/
 #departments a{
     text-decoration: none;
 }
-
 #departments ul{
     padding-left: 10px;
     margin: 0;
 }
-
 #departments li{
     padding: 5px;
     list-style-type: none;
     color: #000;
 }
+#departments li a.name{color: #000;}
+#departments li i.hidden{visibility: hidden;}
+#departments li i{padding: 0 5px 0 5px;}
+#departments li span{margin: 0 0 0 10px;}
+#departments li span.hidden{visibility: hidden;}
+#departments li span.operator i{margin: 0 0 0 5px; padding: 0 0 0 0;}
+#departments li.select{background-color: #eee;}
+#departments li.active{background-color: #00a5e6; color: #fff;}
+#departments li.active a{color: #fff;}
 
-#departments li i{
-    margin: 0 0 0 5px;
-}
-
-#departments li span.hidden{
+#departments ul.hidden {
     visibility: hidden;
-    margin: 0 0 0 10px;
+    height: 0px;
+    overflow: hidden;
 }
-
-#departments li span.visible{
-    visibility: visible;
-    margin: 0 0 0 10px;
-}
-
-#departments li.select{
-    background-color: #eee;
-}
-
-#departments li.active{
-    background-color: #00a5e6;
-    color: #fff;
-}
+/*--- 部门栏 结束 ---*/
 
 .uk-nav-side>li>a.disabled{
     color: #bbb;
